# InViculum

./: CMakeLists.txt  README.md
src/include/: game.hxx  glfw_wrapper.hxx  vulkan_wrapper.hxx
src/include/modules/: directional_light.hxx  module.hxx  multi_point_light.hxx  single_point_light.hxx
src/include/platform/: platform.hxx
src/include/render/: push_constants.hxx  render_manager.hxx  vertex.hxx
src/include/resource/: resource_manager.hxx
src/include/vml/: mat2.hxx  mat3.hxx  mat4.hxx  quaternion.hxx  transform.hxx  vec2.hxx  vec3.hxx  vec4.hxx
src/main/: game.cxx  glfw_wrapper.cxx  start.cxx  vulkan_wrapper.cxx
src/main/modules/: directional_light.cxx  multi_point_light.cxx  single_point_light.cxx
src/main/platform/: mac.cxx  windows.cxx
src/main/render/: render_manager.cxx
src/main/resource/: resource_manager.cxx
src/main/vml/: mat2.cxx  mat3.cxx  mat4.cxx  quaternion.cxx  transform.cxx  vec2.cxx  vec3.cxx  vec4.cxx
src/resources/shaders/: directional.fs.glsl  multi_point.fs.glsl  multi_point.vs.glsl  single_point.fs.glsl
